[build-system]
requires = ["setuptools >= 40.6.0", "setuptools_scm[toml]~=8.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']

[tool.towncrier]
single_file = false
filename = "release-notes/{version}.rst"
directory = "release-notes/unreleased"
title_format = "{version} ({project_date})"
issue_format = "`{issue} <https://github.com/Qiskit/qiskit-ibm-runtime/pull/{issue}>`__"

    [[tool.towncrier.type]]
    directory = "upgrade"
    name = "Upgrade Notes"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "deprecation"
    name = "Deprecation Notes"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "feat"
    name = "New Features"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "bug"
    name = "Bug Fixes"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "other"
    name = "Other Notes"
    showcontent = true

[tool.setuptools.packages.find]
exclude = ["test*"]
namespaces = false

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools_scm]
root = "."
version_file = "qiskit_ibm_runtime/VERSION.txt"
version_scheme = "release-branch-semver"
fallback_version = "0.43.1"

[project]
name = "qiskit-ibm-runtime"
version = "0.44.0b2+executor.preview"
description = "IBM Quantum client for Qiskit Runtime."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Qiskit Development Team", email="qiskit@us.ibm.com"},
]
license = {text = "Apache 2.0"}
classifiers=[
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

keywords = ["qiskit", "sdk", "quantum", "api", "runtime", "ibm"]

requires-python=">=3.9"

dependencies = [
    "requests>=2.19",
    "requests-ntlm>=1.1.0",
    "numpy>=1.13",
    "urllib3>=1.21.1",
    "python-dateutil>=2.8.0",
    "ibm-platform-services>=0.22.6",
    "ibm-quantum-schemas @ git+https://github.com/Qiskit/ibm-quantum-schemas.git@1b6b76605f482ae0e42cdf1d53c93fca36a53c67#egg=ibm-quantum-schemas",
    "pydantic>=2.5.0",
    "qiskit>=1.4.1",
    "packaging",
    "pybase64>=1.0",
    "samplomatic>=0.13.0"
]

[project.entry-points."qiskit.transpiler.translation"]
ibm_backend = "qiskit_ibm_runtime.transpiler.plugin:IBMTranslationPlugin"
ibm_dynamic_circuits = "qiskit_ibm_runtime.transpiler.plugin:IBMDynamicTranslationPlugin"
ibm_fractional = "qiskit_ibm_runtime.transpiler.plugin:IBMFractionalTranslationPlugin"
ibm_dynamic_and_fractional = "qiskit_ibm_runtime.transpiler.plugin:IBMDynamicFractionalTranslationPlugin"

[project.urls]
documentation = "https://quantum.cloud.ibm.com/docs/"
repository = "https://github.com/Qiskit/qiskit-ibm-runtime"
issues = "https://github.com/Qiskit/qiskit-ibm-runtime/issues"


[project.optional-dependencies]

common = [
    "mypy==0.931",
    "pylint==3.0.0",
    "pproxy==2.7.8",
    "nbqa==1.5.3",
    "matplotlib>=2.1",
    "jupyter",
    "scipy>=1.0",
    "nbformat>=4.4.0",
    "nbconvert>=5.3.1",
    "qiskit-aer>=0.17.0",
    "black~=24.1",
    "coverage>=6.3",
    "pylatexenc",
    "scikit-learn",
    "setuptools",
]

documentation = [
    "nbsphinx",
    "Sphinx>=6",
    "sphinx-automodapi",
    "sphinx-autodoc-typehints<=1.19.2",
    "jupyter-sphinx",
    "sphinxcontrib-katex==0.9.9",
    "packaging",
    "qiskit-sphinx-theme~=2.0.0",
]

visualization = ["plotly>=5.23.0"]
test = ["ddt>=1.2.0,!=1.4.0,!=1.4.3"]

dev = [
    "qiskit-ibm-runtime[test]",
    "qiskit-ibm-runtime[common]",
    "qiskit-ibm-runtime[documentation]",
    "qiskit-ibm-runtime[visualization]",
]
